WIP - Add classnames - Fix words top positioning and nested letters so they don't overlap - Add pause functionality - Add level start and finish

--- a/src/components/gameArea/gameArea.sass
+++ b/src/components/gameArea/gameArea.sass
@@ -1,6 +1,7 @@
 .gameArea
   position: relative
-  width: 100% /* Full width of the container */
-  height: 400px /* Adjust as needed */
-  right: 10px /* Spacing from the right edge */
-  z-index: 1 /* To ensure it's above other elements if needed */
+  width: 100% 
+  height: 400px 
+  right: 10px 
+  z-index: 1 
+  margin: 20px
