--- a/src/components/letter/letter.sass
+++ b/src/components/letter/letter.sass
@@ -1,10 +1,19 @@
 @keyframes scrollHorizontal
-    from
-        right: 0
-    to
-        right: 100%
+  from
+    right: 0
+  to
+    right: 100%
 
-.letter, .word
-    animation: scrollHorizontal 5s linear infinite
-    position: absolute
-    top: 0
+.letter
+  animation: scrollHorizontal 5s linear infinite
+  position: absolute
+  top: 0
+
+.letter 
+  animation-play-state: running
+
+.letter.paused 
+  animation-play-state: paused
+
+.letterInWord
+  display: inline
